--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ repositories {
         name = 'git-hub-packages-beef'
         url = 'https://maven.pkg.github.com/jelly-ware/beef'
         credentials {
-            username = System.getenv('GITHUB_ACTOR')
-            password = System.getenv('GITHUB_TOKEN')
+            username = System.getenv('GITHUB_USR')
+            password = System.getenv('GITHUB_PWD')
         }
     }
 }
@@ -65,8 +65,8 @@ publishing {
             name = 'GitHubPackages'
             url = 'https://maven.pkg.github.com/jelly-ware/toolkit'
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
+                username = System.getenv('GITHUB_USR')
+                password = System.getenv('GITHUB_PWD')
             }
         }
     }
