--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # ignore system files
-**/.*
+# **/.*
 # ignore everything in the root
 /*
 # un-ignore files in root
 !/src/
-!/.github/workflows/
+!/.github/
 !/README.md
 !/.gitignore
 !/settings.gradle
