--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     compileOnly "org.projectlombok:lombok:${lombok}"
     annotationProcessor "org.projectlombok:lombok:${lombok}"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:${junitVersion}'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:${junitVersion}'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
     testImplementation 'org.assertj:assertj-core:3.15.0'
 
     compileOnly 'jakarta.platform:jakarta.jakartaee-api:8.0.0'
